# FastAPI-Fitforge

./: .gitignore  main.py  pyproject.toml  requirements.txt
backend/: main.py
backend/api/: auth.py  diet.py  generate.py  profile.py  workout.py
backend/core/: dependencies.py  security.py
backend/db/: models.py  session.py
backend/rag/: chain.py  ingest.py  retriever.py  service.py  validator.py
backend/schemas/: diet.py  plan.py  profile.py  workout.py  workout_plan.py
data/: country_diets.json  general_queries.json  rag_dataset.json  workout_plans.json
vector_store/: index.faiss  index.pkl
