[project]
name = "fitforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.4",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-text-splitters>=1.1.0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.9",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "streamlit>=1.54.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.40.0",
]
